-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 6.0.0-beta1
-
None
-
325db93a7 (13.0)
Consider this code:
void func(int i, int j); void func(int i, double d); int main() { func(0, /* request function hint here */ }
Make sure you have clangd running on this file and request a function hint at the specified location.
You will get two signatures, as expected. In the first one, the second parameter correctly has a bold font, indicating the parameter corresponding to the current cursor position. But if you switch to the next signature, the active parameter is not marked there.
- relates to
-
QTCREATORBUG-33009 Wrong position on Ctrl-Space with nested struct initialization
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26346 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
374142,2 | LSP: Add support for activeParameter of SignatureInformation | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
545541,5 | LanguageClient: improve clangd function hint | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |