LSP: Add support for activeParameter of SignatureInformation

Task-number: QTCREATORBUG-26346
Change-Id: Ieab18f08e4f1b9fa6cacfae0a18310af4bc35165
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>